# emotional-ed-test

./: EXPERIMENT_PLAN_V2.md  EXPERIMENT_PLAN_V3.md  IMPLEMENTATION_ROADMAP.md  LICENSE  MATHEMATICAL_GROUNDING.md  MATH_GROUNDING_REVIEW.md  NL_PAPER_SUMMARY.md  README.md  REPORT.md  SCALABILITY.md  THEORETICAL_REVIEW.md  agents.py  agents_anger.py  agents_conflict.py  agents_disgust.py  agents_grief.py  agents_integration.py  agents_joy.py  agents_regret.py  agents_regulation.py  agents_temporal.py  agents_transfer.py  agents_wanting.py  exp18_slippery_cliff.py  gridworld.py  gridworld_anger.py  gridworld_conflict.py  gridworld_disgust.py  gridworld_grief.py  gridworld_integration.py  gridworld_joy.py  gridworld_regret.py  gridworld_regulation.py  gridworld_temporal.py  gridworld_transfer.py  gridworld_wanting.py  pyproject.toml  test_anger.py  test_conflict.py  test_disgust.py  (+15 more)
agents_v2/: __init__.py  agents_cvar_fear.py  agents_disgust_v2.py  agents_feature_based.py  agents_regulation_v2.py
analysis/: DEEP_ANALYSIS_REVISIT.md  MODEL_FEEDBACK_SYNTHESIS.md
data/: base_freeform_results.json  base_model_results.json  base_model_v2_results.json  direction_bank_pca.json  direction_bank_pca_large.json  effect_size_evaluation.json  emotional_pairs.json  emotional_pairs_large.json  final_steering_analysis.json  large_dataset_validation.json  layer_targeting_results.json  model_comparison.json  new_models_results.json  nlp_analysis_results.json  nlp_analysis_v2_results.json  pca_validation_results.json  prefix_tuning_evaluation.json  semantic_evaluation.json  (+3 more)
docs/: TODO.md  (+9 more)
(+159 files in other folders)
