[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emotional-ed-test"
version = "0.1.0"
description = "Emotional Exploration-Driven RL and LLM Integration"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "gymnasium>=0.29.0",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
llm = [
    "transformers>=4.40.0",
    "accelerate>=0.25.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["src"]
